# yahooquery_py

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  sample_env.txt
src/historicalprice/: __init__.py  api.py  api_polygon.py
src/historicalprice/database/: crud.py
src/project/: __init__.py  utils.py
src/project/database/: __init__.py  connection.py  models.py  schemas.py
src/yahooquery_py/: __init__.py  api.py
src/yahooquery_py/database/: base.py
