[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project_name"
authors = [{name = "David McKim", email = "davidmckim@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [

]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
  "src"
]
