[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yahooquery_py"
authors = [{name = "David McKim", email = "davidmckim@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "yahooquery",
    "pandas",

]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
  "src"
]
