[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yahooquery_py"
authors = [{name = "David McKim", email = "davidmckim@gmail.com"}]
dynamic = ["version", "description"]
dependencies = [
    "yfinance>=0.2.44",
    "pandas>=2.2.3",
    "httpx>=0.27.2",

]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
  "src"
]
